--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
   <title>Ajax</title>
 </head>
 <body>
+  <div class="err"></div>
   <div class="main_container">
-    <form action="">
+    <div class="container">
+      <h2>User Profile</h2>
+    <form>
       <label>
         <input type="text" id="name" class="input" placeholder="Name">
         <input type="text" id="age" class="input" placeholder="Age">
         <button type="button" name="button" id ="button">Add User</button>
-
      </label>
    </form>
-
-
   </div>
+</div>
+
   <div class="user-container">
     <div class="user-profile">
 
