--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>Ajax</title>
 </head>
 <body>
-  <div class="err"></div>
+  <div class="err">
+    
+  </div>
   <div class="main_container">
     <div class="container">
       <h2>User Profile</h2>
@@ -23,9 +25,7 @@
 </div>
 
   <div class="user-container">
-    <div class="user-profile">
 
-    </div>
   </div>
 
 
